# scancode.io-pipeline-glc_scan

./: CHANGELOG.rst  Makefile  README.rst  configure  configure.bat  runtests.py  setup.cfg
.github/workflows/: ci.yml
docs/source/contribute/: GSoC'21 Final Report.rst
etc/requirements/: base.txt  dev.txt
src/scancode_glc_plugin/: glc_pipeline.py
src/scancode_glc_plugin/pipelines/: glc_scan.py
src/scancode_glc_plugin/pipes/: glc.py
tests/: test_pipes.py  test_scancode_glc_plugin.py  test_settings.py
