[metadata]
license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
name = scancodeio_glc_plugin
author = nexB. Inc. and others
author_email = info@aboutcode.org
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = Google Licenseclassifier pipeline for ScanCode.io
long_description = file:README.rst
url = https://github.com/nexB/scancodeio.io-pipeline-glc_scan
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
    utilities
    scancodeio
    pipelines

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
python_requires = >=3.6
install_requires =
    golicense_classifier==0.0.16
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.entry_points]
scancodeio_pipelines =
    glc_scan = scancode_glc_plugin.pipelines.glc_scan:LicenseClassifierScan

[options.extras_require]
testing =
    pytest >= 6
    pytest-xdist >= 2
docs=
    Sphinx>=3.3.1
    sphinx-rtd-theme>=0.5.0
    doc8>=0.8.1
